gitops/step-02-rhoai/base/rhoai-operator/namespace.yaml
# Namespace for RHOAI Operator
apiVersion: v1
kind: Namespace
metadata:
  name: redhat-ods-operator
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    openshift.io/cluster-monitoring: "true"
